--- a/README.rdoc
+++ b/README.rdoc
@@ -17,3 +17,5 @@ i'm rather other the free floats hump, actually as said "i backed into this" cha
 thunk
 
 Enjoy!
+
+P.S.: no Ruids were harmed during the writing of this software.
